# rust_law_web

./: new_all.csv
handle-errors/: Cargo.toml
handle-errors/src/: lib.rs
law_rs/: Cargo.toml
law_rs/src/: lib.rs  main.rs
law_web/: Cargo.toml  all.csv  log4rs.yaml  logs.txt
law_web/law_rs/src/: lib.rs  main.rs
law_web/src/: main.rs  store.rs
law_web/src/routes/: file.rs  law.rs  mod.rs  record.rs
law_web/src/types/: file.rs  mod.rs  record.rs
law_web/static/: index.html  jquery.html
law_web/static/css/: ff.css  record.css  style.css
law_web/static/js/: File.js  MyCustomButton.js  ck.js  config.js  jq-test.js  script.js
law_web/static/js/abbreviation/: abbreviationcommand.js  abbreviationediting.js  abbreviationui.js  abbreviationview.js
