[package]
name = "law_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.209", features = ["derive"] }
indexmap = "2.5.0"
anyhow = "1.0.86"
csv = "1.3.0"
sqlx = { version = "0.8", features = [ "runtime-tokio-rustls", "migrate", "postgres" ] }
regex = "1"
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread", "macros"] }