[package]
name = "law_web"
version = "0.1.0"
edition = "2021"


[dependencies]
law_rs = {path="../law_rs"}
handle-errors = {path="../handle-errors"}
tokio = {version = "1.2", features = ["full"]}
warp = "0.3"
serde = {version = "1.0",  features = ["derive"]}
serde_json = "1.0"
chrono = "0.4"
percent-encoding = "2.3.1"