[package]
name = "law_web"
version = "0.1.0"
edition = "2021"


[dependencies]
law_rs = {path="../law_rs"}
handle-errors = {path="../handle-errors"}
tokio = {version = "1.2", features = ["full"]}
warp = "0.3"
serde = {version = "1.0",  features = ["derive"]}
serde_json = "1.0"
chrono = "0.4"
sqlx = { version = "0.8", features = [ "runtime-tokio-rustls", "migrate", "postgres" ] }
percent-encoding = "2.3.1"
indexmap = "2.5.0"
log = "0.4"
env_logger = "0.10.0"
log4rs = "1.0"
uuid = { version = "0.8", features = ["v4"]}
tracing = {version = "0.1", featrues = ["log"]}
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.11", features = ["json"]}
pulldown-cmark = "0.9"